    - Changed the default mod settings for planet-based trade productivity bonuses to start from 0% on Nauvis instead of -20%, with the intention to reduce confusion for new players of the mod.
        The default settings are now:
          Nauvis = 0%
          Vulcanus = 5%
          Fulgora = 10%
          Gleba = 15%
          Aquilo = 20%
  Changes:
    - Added extra conditions and info to the first few quests to improve NPE (new player experience).
    - Made the /simple-trade-loops command public.
    - Added cooldowns to some public commands to reduce the risk of griefing by overloading the server.
    - Reformatted output from /simple-trade-loops.
    - Changed the default hex pool size from 1000 to 250, allowing for larger saves before noticing potential UPS drops from all the trading.
    - Changed the rocket capacities of all coins to their respective stack sizes.
    - Dungeon hex cores now spawn immediately when the dungeon generates, giving them a glow.
  Bugfixes:
    - Fixed that dungeons invisibly occupied some hexes just outside of themselves, preventing you from claiming them.
    - Fixed that hex cores did not correctly show whether the hexports were currently enabled.
    - Fixed crash on running the command /hextorio-debug when in remote view.
    - Fixed that updating the mod settings for planet-based trade productivity bonuses would not take effect without a restart.
    - Fixed floating point rounding errors around 0 for trade productivity.
    - Fixed that item-giving quests would not drop a remainder of a stack if the inventory is nearly full instead of only dropping entire stacks that wouldn't fit.
  Gui:
    - Trade arrows display nonzero productivity without mousing over them.
    - Softened the white and cyan trade arrow sprites.
    - Removed the boxes around each trade, de-cluttering the hex core GUI and trade overview.